--- a/src/com/arcon/ui/view/IOFrame.form
+++ b/src/com/arcon/ui/view/IOFrame.form
@@ -19,7 +19,9 @@
                 <preferred-size width="150" height="-1"/>
               </grid>
             </constraints>
-            <properties/>
+            <properties>
+              <enabled value="false"/>
+            </properties>
           </component>
           <component id="cfc54" class="javax.swing.JLabel">
             <constraints>
@@ -35,7 +37,9 @@
                 <preferred-size width="150" height="50"/>
               </grid>
             </constraints>
-            <properties/>
+            <properties>
+              <enabled value="false"/>
+            </properties>
           </component>
           <component id="d082a" class="javax.swing.JLabel">
             <constraints>
@@ -51,7 +55,9 @@
                 <preferred-size width="150" height="-1"/>
               </grid>
             </constraints>
-            <properties/>
+            <properties>
+              <enabled value="false"/>
+            </properties>
           </component>
           <component id="c067f" class="javax.swing.JLabel">
             <constraints>
@@ -74,15 +80,8 @@
               <grid row="6" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <enabled value="false"/>
               <text value="Perform"/>
-            </properties>
-          </component>
-          <component id="dcfbc" class="javax.swing.JLabel">
-            <constraints>
-              <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <text value="Choose:"/>
             </properties>
           </component>
           <component id="ba4eb" class="javax.swing.JSeparator">
