--- a/src/com/arcon/ui/view/IOFrame.form
+++ b/src/com/arcon/ui/view/IOFrame.form
@@ -20,7 +20,7 @@
               </grid>
             </constraints>
             <properties>
-              <enabled value="false"/>
+              <enabled value="true"/>
             </properties>
           </component>
           <component id="cfc54" class="javax.swing.JLabel">
@@ -38,7 +38,7 @@
               </grid>
             </constraints>
             <properties>
-              <enabled value="false"/>
+              <enabled value="true"/>
             </properties>
           </component>
           <component id="d082a" class="javax.swing.JLabel">
@@ -56,7 +56,7 @@
               </grid>
             </constraints>
             <properties>
-              <enabled value="false"/>
+              <enabled value="true"/>
             </properties>
           </component>
           <component id="c067f" class="javax.swing.JLabel">
@@ -80,7 +80,7 @@
               <grid row="6" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <enabled value="false"/>
+              <enabled value="true"/>
               <text value="Perform"/>
             </properties>
           </component>
@@ -170,10 +170,4 @@
       </grid>
     </children>
   </grid>
-  <buttonGroups>
-    <group name="buttonGroupIO">
-      <member id="535d9"/>
-      <member id="cbec"/>
-    </group>
-  </buttonGroups>
 </form>
