--- a/src/com/arcon/ui/view/LogFrame.form
+++ b/src/com/arcon/ui/view/LogFrame.form
@@ -83,6 +83,42 @@
               </scrollpane>
             </children>
           </grid>
+          <grid id="d8dde" binding="panelTableCards" layout-manager="BorderLayout" hgap="0" vgap="0">
+            <constraints>
+              <tabbedpane title="Cards"/>
+            </constraints>
+            <properties/>
+            <border type="none"/>
+            <children>
+              <toolbar id="484b4">
+                <constraints border-constraint="South"/>
+                <properties>
+                  <floatable value="false"/>
+                </properties>
+                <border type="none"/>
+                <children>
+                  <component id="3de6c" class="javax.swing.JButton" binding="buttonCardsRefresh">
+                    <constraints/>
+                    <properties>
+                      <label value="Refresh"/>
+                      <text value="Refresh"/>
+                    </properties>
+                  </component>
+                </children>
+              </toolbar>
+              <scrollpane id="9d128">
+                <constraints border-constraint="Center"/>
+                <properties/>
+                <border type="none"/>
+                <children>
+                  <component id="90bc6" class="javax.swing.JTable" binding="tableCards">
+                    <constraints/>
+                    <properties/>
+                  </component>
+                </children>
+              </scrollpane>
+            </children>
+          </grid>
         </children>
       </tabbedpane>
       <grid id="d5679" binding="panelLogMainTop" layout-manager="BorderLayout" hgap="0" vgap="0">
