--- a/src/com/arcon/ui/view/LogFrame.form
+++ b/src/com/arcon/ui/view/LogFrame.form
@@ -119,6 +119,43 @@
               </scrollpane>
             </children>
           </grid>
+          <grid id="504f1" binding="panelTableDiscount" layout-manager="BorderLayout" hgap="0" vgap="0">
+            <constraints>
+              <tabbedpane title="Discounts"/>
+            </constraints>
+            <properties/>
+            <border type="none"/>
+            <children>
+              <toolbar id="ad28e">
+                <constraints border-constraint="South"/>
+                <properties>
+                  <floatable value="false"/>
+                </properties>
+                <border type="none"/>
+                <children>
+                  <component id="d49bb" class="javax.swing.JButton" binding="buttonDiscountsRefresh">
+                    <constraints/>
+                    <properties>
+                      <inheritsPopupMenu value="false"/>
+                      <label value="Refresh"/>
+                      <text value="Refresh"/>
+                    </properties>
+                  </component>
+                </children>
+              </toolbar>
+              <scrollpane id="ff859">
+                <constraints border-constraint="Center"/>
+                <properties/>
+                <border type="none"/>
+                <children>
+                  <component id="798ea" class="javax.swing.JTable" binding="tableDiscounts">
+                    <constraints/>
+                    <properties/>
+                  </component>
+                </children>
+              </scrollpane>
+            </children>
+          </grid>
         </children>
       </tabbedpane>
       <grid id="d5679" binding="panelLogMainTop" layout-manager="BorderLayout" hgap="0" vgap="0">
