--- a/src/com/arcon/ui/view/OptionsFrame.form
+++ b/src/com/arcon/ui/view/OptionsFrame.form
@@ -1,13 +1,185 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.arcon.ui.view.OptionsFrame">
-  <grid id="27dc6" row-count="1" column-count="1" layout-manager="BorderLayout">
-    <margin top="0" left="0" bottom="0" right="0"/>
+  <grid id="27dc6" binding="panelMain" layout-manager="BorderLayout" hgap="0" vgap="0">
     <constraints>
       <xy x="20" y="20" width="500" height="400"/>
-      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
     </constraints>
     <properties/>
     <border type="none"/>
-    <children/>
+    <children>
+      <grid id="3d4a8" binding="panelMenu" layout-manager="GridLayoutManager" row-count="5" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+        <margin top="0" left="0" bottom="0" right="0"/>
+        <constraints border-constraint="West"/>
+        <properties/>
+        <border type="etched"/>
+        <children>
+          <hspacer id="20572">
+            <constraints>
+              <grid row="0" column="2" row-span="5" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+          </hspacer>
+          <toolbar id="16f9c">
+            <constraints>
+              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
+                <preferred-size width="-1" height="20"/>
+              </grid>
+            </constraints>
+            <properties>
+              <floatable value="false"/>
+              <orientation value="1"/>
+            </properties>
+            <border type="none"/>
+            <children>
+              <component id="271ee" class="javax.swing.JButton" binding="buttonMenuChangeUser">
+                <constraints/>
+                <properties>
+                  <horizontalAlignment value="0"/>
+                  <label value="Change User"/>
+                  <maximumSize width="100" height="33"/>
+                  <minimumSize width="100" height="33"/>
+                  <opaque value="false"/>
+                  <preferredSize width="100" height="33"/>
+                  <text value="Change User"/>
+                </properties>
+              </component>
+              <component id="46831" class="javax.swing.JButton" binding="buttonMenuPrice">
+                <constraints/>
+                <properties>
+                  <alignmentX value="0.0"/>
+                  <alignmentY value="0.5"/>
+                  <autoscrolls value="false"/>
+                  <defaultCapable value="false"/>
+                  <horizontalAlignment value="0"/>
+                  <label value="Price"/>
+                  <maximumSize width="100" height="33"/>
+                  <minimumSize width="100" height="33"/>
+                  <opaque value="false"/>
+                  <preferredSize width="100" height="33"/>
+                  <text value="Price"/>
+                </properties>
+              </component>
+              <component id="c81ff" class="javax.swing.JButton" binding="buttonMenuDiscounts">
+                <constraints/>
+                <properties>
+                  <horizontalAlignment value="0"/>
+                  <maximumSize width="100" height="33"/>
+                  <minimumSize width="100" height="33"/>
+                  <opaque value="false"/>
+                  <preferredSize width="100" height="33"/>
+                  <text value="Discounts"/>
+                </properties>
+              </component>
+              <component id="d085a" class="javax.swing.JButton" binding="buttonMenuUsers">
+                <constraints/>
+                <properties>
+                  <horizontalAlignment value="0"/>
+                  <maximumSize width="100" height="33"/>
+                  <minimumSize width="100" height="33"/>
+                  <opaque value="false"/>
+                  <preferredSize width="100" height="33"/>
+                  <text value="Users"/>
+                </properties>
+              </component>
+              <component id="9a3b9" class="javax.swing.JButton" binding="buttonMenuProgram">
+                <constraints/>
+                <properties>
+                  <maximumSize width="100" height="33"/>
+                  <minimumSize width="100" height="33"/>
+                  <preferredSize width="100" height="33"/>
+                  <text value="Program"/>
+                </properties>
+              </component>
+            </children>
+          </toolbar>
+          <hspacer id="7cdb3">
+            <constraints>
+              <grid row="1" column="0" row-span="2" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+          </hspacer>
+          <vspacer id="e38de">
+            <constraints>
+              <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+            </constraints>
+          </vspacer>
+        </children>
+      </grid>
+      <grid id="58edc" binding="panelContextMain" layout-manager="CardLayout" hgap="0" vgap="0">
+        <constraints border-constraint="Center"/>
+        <properties/>
+        <border type="etched"/>
+        <children>
+          <grid id="1926e" binding="panelContextChangeUser" layout-manager="GridLayoutManager" row-count="4" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+            <margin top="0" left="0" bottom="0" right="0"/>
+            <constraints>
+              <card name="Card1"/>
+            </constraints>
+            <properties/>
+            <border type="none"/>
+            <children>
+              <component id="1a999" class="javax.swing.JLabel">
+                <constraints>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="Current User:"/>
+                </properties>
+              </component>
+              <hspacer id="f0549">
+                <constraints>
+                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+              </hspacer>
+              <vspacer id="730c0">
+                <constraints>
+                  <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+                </constraints>
+              </vspacer>
+              <component id="fece3" class="javax.swing.JLabel">
+                <constraints>
+                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="Current User type:"/>
+                </properties>
+              </component>
+              <component id="ccf23" class="javax.swing.JLabel" binding="labelUserName">
+                <constraints>
+                  <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="UserNameNull"/>
+                </properties>
+              </component>
+              <hspacer id="226f7">
+                <constraints>
+                  <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+              </hspacer>
+              <component id="a00b0" class="javax.swing.JLabel" binding="labelUserType">
+                <constraints>
+                  <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="UserTypeNull"/>
+                </properties>
+              </component>
+              <component id="6c8bf" class="javax.swing.JButton" binding="buttonChangeUser">
+                <constraints>
+                  <grid row="2" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="Change User"/>
+                </properties>
+              </component>
+              <hspacer id="d2ec8">
+                <constraints>
+                  <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+              </hspacer>
+            </children>
+          </grid>
+        </children>
+      </grid>
+    </children>
   </grid>
 </form>
