--- a/src/com/arcon/ui/view/OptionsFrame.form
+++ b/src/com/arcon/ui/view/OptionsFrame.form
@@ -264,10 +264,10 @@
               </component>
             </children>
           </grid>
-          <grid id="ed1b5" binding="panelContextDiscounts" layout-manager="GridLayoutManager" row-count="5" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="ed1b5" binding="panelContextDiscounts" layout-manager="GridLayoutManager" row-count="4" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
-              <card name="Card1"/>
+              <card name="CardDiscounts"/>
             </constraints>
             <properties/>
             <border type="none"/>
@@ -280,19 +280,9 @@
                   <text value="Add"/>
                 </properties>
               </component>
-              <hspacer id="33d44">
-                <constraints>
-                  <grid row="0" column="1" row-span="4" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                </constraints>
-              </hspacer>
-              <vspacer id="760c1">
-                <constraints>
-                  <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-                </constraints>
-              </vspacer>
               <scrollpane id="ff020">
                 <constraints>
-                  <grid row="0" column="2" row-span="4" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                  <grid row="0" column="1" row-span="4" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties/>
                 <border type="none"/>
