--- a/src/com/arcon/ui/view/OptionsFrame.form
+++ b/src/com/arcon/ui/view/OptionsFrame.form
@@ -2,7 +2,7 @@
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.arcon.ui.view.OptionsFrame">
   <grid id="27dc6" binding="panelMain" layout-manager="BorderLayout" hgap="0" vgap="0">
     <constraints>
-      <xy x="20" y="20" width="500" height="400"/>
+      <xy x="20" y="20" width="569" height="400"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -69,17 +69,6 @@
                   <text value="Discounts"/>
                 </properties>
               </component>
-              <component id="d085a" class="javax.swing.JButton" binding="buttonMenuUsers">
-                <constraints/>
-                <properties>
-                  <horizontalAlignment value="0"/>
-                  <maximumSize width="100" height="33"/>
-                  <minimumSize width="100" height="33"/>
-                  <opaque value="false"/>
-                  <preferredSize width="100" height="33"/>
-                  <text value="Users"/>
-                </properties>
-              </component>
               <component id="9a3b9" class="javax.swing.JButton" binding="buttonMenuProgram">
                 <constraints/>
                 <properties>
@@ -98,7 +87,7 @@
           </hspacer>
           <vspacer id="e38de">
             <constraints>
-              <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+              <grid row="2" column="1" row-span="3" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
             </constraints>
           </vspacer>
         </children>
@@ -108,7 +97,7 @@
         <properties/>
         <border type="etched"/>
         <children>
-          <grid id="1926e" binding="panelContextChangeUser" layout-manager="GridLayoutManager" row-count="4" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="1926e" binding="panelContextChangeUser" layout-manager="GridLayoutManager" row-count="6" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <card name="CardChangeUser"/>
@@ -128,11 +117,6 @@
                   <text value="Current User:"/>
                 </properties>
               </component>
-              <vspacer id="730c0">
-                <constraints>
-                  <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-                </constraints>
-              </vspacer>
               <component id="fece3" class="javax.swing.JLabel">
                 <constraints>
                   <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
@@ -163,10 +147,11 @@
               </component>
               <component id="6c8bf" class="javax.swing.JButton" binding="buttonChangeUser">
                 <constraints>
-                  <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                  <grid row="2" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="Change User"/>
+                  <label value="Change current User"/>
+                  <text value="Change current User"/>
                 </properties>
               </component>
               <hspacer id="d2ec8">
@@ -174,6 +159,50 @@
                   <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
               </hspacer>
+              <scrollpane id="7821a" binding="scrollPaneUsers">
+                <constraints>
+                  <grid row="3" column="0" row-span="2" col-span="4" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <visible value="false"/>
+                </properties>
+                <border type="none"/>
+                <children>
+                  <component id="c2611" class="javax.swing.JTable" binding="tableUsers">
+                    <constraints/>
+                    <properties/>
+                  </component>
+                </children>
+              </scrollpane>
+              <component id="c92a6" class="javax.swing.JButton" binding="buttonChangeExistUser">
+                <constraints>
+                  <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <label value="Change user"/>
+                  <text value="Change user"/>
+                  <visible value="false"/>
+                </properties>
+              </component>
+              <component id="89320" class="javax.swing.JButton" binding="buttonAddNewUser">
+                <constraints>
+                  <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <label value="New user"/>
+                  <text value="New user"/>
+                  <visible value="false"/>
+                </properties>
+              </component>
+              <component id="44a44" class="javax.swing.JButton" binding="buttonDeleteExistUser">
+                <constraints>
+                  <grid row="5" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="Delete user"/>
+                  <visible value="false"/>
+                </properties>
+              </component>
             </children>
           </grid>
           <grid id="459eb" binding="panelContextPrice" layout-manager="GridLayoutManager" row-count="4" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
