--- a/src/com/arcon/ui/view/OptionsFrame.form
+++ b/src/com/arcon/ui/view/OptionsFrame.form
@@ -97,7 +97,7 @@
         <properties/>
         <border type="etched"/>
         <children>
-          <grid id="1926e" binding="panelContextChangeUser" layout-manager="GridLayoutManager" row-count="6" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="1926e" binding="panelContextChangeUser" layout-manager="GridLayoutManager" row-count="6" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <card name="CardChangeUser"/>
@@ -129,25 +129,9 @@
                   <text value="Current User type:"/>
                 </properties>
               </component>
-              <component id="ccf23" class="javax.swing.JLabel" binding="labelUserName">
-                <constraints>
-                  <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <text value="UserNameNull"/>
-                </properties>
-              </component>
-              <component id="a00b0" class="javax.swing.JLabel" binding="labelUserType">
-                <constraints>
-                  <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <text value="UserTypeNull"/>
-                </properties>
-              </component>
               <component id="6c8bf" class="javax.swing.JButton" binding="buttonChangeUser">
                 <constraints>
-                  <grid row="2" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                  <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
                   <label value="Change current User"/>
@@ -156,7 +140,7 @@
               </component>
               <hspacer id="d2ec8">
                 <constraints>
-                  <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                  <grid row="0" column="2" row-span="1" col-span="2" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
               </hspacer>
               <scrollpane id="7821a" binding="scrollPaneUsers">
@@ -203,6 +187,32 @@
                   <visible value="false"/>
                 </properties>
               </component>
+              <vspacer id="7488c">
+                <constraints>
+                  <grid row="3" column="4" row-span="3" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+                </constraints>
+              </vspacer>
+              <component id="a00b0" class="javax.swing.JLabel" binding="labelUserType">
+                <constraints>
+                  <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="UserTypeNull"/>
+                </properties>
+              </component>
+              <component id="ccf23" class="javax.swing.JLabel" binding="labelUserName">
+                <constraints>
+                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="UserNameNull"/>
+                </properties>
+              </component>
+              <hspacer id="d5bac">
+                <constraints>
+                  <grid row="2" column="1" row-span="1" col-span="3" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+              </hspacer>
             </children>
           </grid>
           <grid id="459eb" binding="panelContextPrice" layout-manager="GridLayoutManager" row-count="4" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
